# datasety

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/datasety/: __init__.py  __main__.py  cli.py
tests/: test_resize.py
