[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasety"
dynamic = ["version"]
description = "CLI tool for dataset preparation: resize, caption, and synthetic image generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "kontextox" }
]
keywords = [
    "dataset",
    "image-processing",
    "captioning",
    "florence-2",
    "synthetic",
    "image-editing",
    "diffusers",
    "machine-learning",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
caption = [
    "torch>=2.0.0",
    "transformers>=4.38.0,<4.46.0",
    "einops",
    "timm",
]
synthetic = [
    "torch>=2.0.0",
    "diffusers>=0.32.0",
    "transformers>=4.38.0",
    "accelerate",
    "sentencepiece",
]
all = [
    "datasety[caption,synthetic]",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
datasety = "datasety.cli:main"

[project.urls]
Homepage = "https://github.com/kontextox/datasety"
Repository = "https://github.com/kontextox/datasety"
Issues = "https://github.com/kontextox/datasety/issues"

[tool.hatch.version]
path = "src/datasety/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/datasety"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
